# KIT-ILIAS-downloader

./: CHANGELOG.md  Cargo.toml  README.md  build.sh  flake.nix  rustfmt.toml  shell.nix
.github/workflows/: ci.yml
src/: cli.rs  errors.rs  ilias.rs  iliasignore.rs  main.rs  queue.rs  util.rs
src/ilias/: course.rs  exercise.rs  file.rs  folder.rs  forum.rs  plugin_dispatch.rs  thread.rs  video.rs  weblink.rs
