[package]
name = "KIT-ILIAS-downloader"
version = "0.3.1"
authors = ["FliegendeWurst <2012gdwu@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
atty = "0.2.14"
bytes = "^1"
cfg-if = "^1"
colored = "^2"
cookie_store = "0.15.1"
ego-tree = "0.6.2"
futures = "0.3.8"
futures-channel = "0.3.8"
futures-util = "0.3.8"
h2 = "0.3.3"
ignore = "0.4.14"
indicatif = "0.16.0"
keyring = "^1"
once_cell = "^1"
regex = "^1"
reqwest = { version = "0.11.0", default-features = false, features = ["cookies", "gzip", "json", "rustls-tls", "stream", "socks"] }
reqwest_cookie_store = "0.2.0"
rpassword = "^5"
rprompt = "^1"
scraper = "0.12.0"
serde_json = "^1"
structopt = "0.3.13"
tempfile = "^3"
tokio = { version = "^1", features = ["fs", "macros", "net", "rt-multi-thread", "process"] }
tokio-util = { version = "0.6.1", features = ["io"] }
toml = "0.5.8"
url = "^2"
