[package]
name = "KIT-ILIAS-downloader"
version = "0.3.9"
authors = ["FliegendeWurst <2012gdwu@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "gzip", "json", "rustls-tls", "stream", "socks"] }
tokio = { version = "1.43.1", features = ["fs", "macros", "net", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.0", features = ["io"] }
serde_json = "1.0.51"
scraper = "0.23"
url = "2.1.1"
futures = "0.3.8"
futures-util = "0.3.8"
futures-channel = "0.3.8"
regex = "1.3.7"
structopt = "0.3.13"
rpassword = "7"
rprompt = "2"
ignore = "0.4.14"
anyhow = "1.0.28"
colored = "2.0.0"
keyring = { git = "https://github.com/FliegendeWurst/keyring-rs" }
cfg-if = "1.0.0"
indicatif = "0.17"
once_cell = "1.7.2"
atty = "0.2.14"
h2 = "0.3.3"
cookie_store = "0.21"
reqwest_cookie_store = "0.8"
bytes = "1.0.1"
toml = "0.8"
tempfile = "3.2.0"
ego-tree = "0.10"
async-recursion = "1.0.0"
